# asdf_multiplat

./: .gitignore  .travis.yml  LICENSE  README.md  asdfm  libsoil.pc
FastTravelSimulator/: CMakeLists.txt  fast_travel_sim.sublime-project
FastTravelSimulator/data/: CreatureEncounter.json  FastCombatEncounter.json  HexData.json  HexEncounter.json  LocationVisibility.json  MentalStatusEffect.json  PhysicalStatusEffect.json  SpiritualStatusEffect.json  StatusEffect.json
FastTravelSimulator/data/Creatures/: CorruptionCreatures.json  HostileCreatures.json  HostileCreatures_Desert.json  NeutralCreatures.json  NeutralCreatures_Desert.json
FastTravelSimulator/data/StatusEffects/: MentalStatusEffect.json  PhysicalStatusEffect.json  SpiritualStatusEffect.json  StatusEffect.json
FastTravelSimulator/src/: fast_travel_sim.cpp  fast_travel_sim.h  hex_generator.h
PlantGenerator/: CMakeLists.txt  plant_generator.sublime-project
PlantGenerator/data/: complex_plant.json  mushroom.json  mushroom.yaml  small_plant.json  small_plant_root.json
PlantGenerator/data/fruit/: berry.json  fruit_list.json  gourd.json  gourd_list.json
PlantGenerator/data/properties/: complex_flavor.json  flavor.json  taste.json
PlantGenerator/data/small_plants/: kale.json  small_plant.json  small_plants.json
PlantGenerator/data/small_plants/roots/: small_plant_root.json  taproot.json
PlantGenerator/doc/: Feature List.txt  High Level Design Document.txt
PlantGenerator/src/: from_json.cpp  from_json.h  main.cpp  plant_generator.cpp  plant_generator.h  plant_printer.cpp  plant_printer.h  stress_test.cpp  stress_test.h  value_types.cpp  value_types.hpp
PlantGenerator/test/: CMakeLists.txt
PlantGenerator/test/data/: basic_node.json  basic_node_extended.json  fancy_node.json  include.json  include_circular.json  include_errors.json  include_extended.json  include_file_not_found.json  merge.json  multi_value.json  range_value.json  test_all.json  user_data.json  weights.json
PlantGenerator/test/src/: include.cpp  merge.cpp  nodes.cpp  nodes.h  test_test.cpp  user_data.cpp  value_types.cpp  weights.cpp
asdf_multiplat/: .cproject  .project  .tags  AsdfMultiplat.sln  AsdfMultiplat.vcxproj  asdf_multiplat.mk  asdf_multiplat.sublime-project  stdafx.cpp  stdafx.h
asdf_multiplat/data/: content_manager.cpp  content_manager.h  gl_enums.h  gl_resources.cpp  gl_resources.h  gl_state.cpp  gl_state.h  gl_vertex_spec.h  interpolator.h  lines_path.h  resource_depot.h  settings.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  texture_bank.cpp  texture_bank.h
asdf_multiplat/main/: asdf_defs.h  asdf_multiplat.cpp  asdf_multiplat.h  input_controller.cpp  input_controller.h  input_sdl.cpp  input_sdl.h  keyboard.cpp  keyboard.h  main.cpp  mouse.cpp  mouse.h  mouse_state.h  stdafx.cpp  stdafx.h
asdf_multiplat/src/: stdafx.h
asdf_multiplat/ui/: .tags_sorted_by_file  polygon.cpp  polygon.h  text.cpp  text.h  ui_base.cpp  ui_base.h  ui_button.h  ui_drag_control.h  ui_label.cpp
asdf_multiplat/utilities/: camera.cpp  camera.h  cjson_utils.hpp  macro_overloading.h  reflected_struct.h  spritebatch.cpp  spritebatch.h  str_const.h  thread_pool.cpp  thread_pool.h  utilities.cpp  utilities.h  utilities_openGL.cpp  utilities_openGL.h
ext/cJSON/: cJSON.c
ext/catch/: catch.hpp
ext/microtar/: microtar.c
gurps_track/: gurps_track.mk  gurps_track.sln  gurps_track.vcxproj  kiui_example.vcxproj
gurps_track/data/: basic_data.h  character.h  skills.cpp  skills.h  to_from_json.cpp
gurps_track/main/: gurps_track.cpp  gurps_track.h  main.cpp  stdafx.h
gurps_track/src/: CMakeCache.txt  CMakeLists.txt  Makefile  character_combat.cpp  character_combat.h  cmake_install.cmake  gurps_track  gurps_track.cpp  gurps_track.sublime-project  stdafx.h
gurps_track/src/data/: basic_data.h  character.cpp  character.h  skills.cpp  skills.h  to_from_json.cpp
gurps_track/src/ui/: character_combat.cpp  character_combat.h  character_main_layout.cpp  character_main_layout.h  character_skill_list.cpp  character_skill_list.h  character_skills_layout.cpp  main_layout.cpp  main_layout.h  skill_list.cpp  skill_list.h  skill_list_layout.cpp  skill_list_layout.h  spell_list.cpp  spell_list.h
gurps_track/src/ui/character/: combat.cpp  combat.h  overview.cpp  overview.h  skill_list.cpp  skill_list.h  spell_list.cpp  spell_list.h  traits.cpp  traits.h
gurps_track/src/ui/create/: trait.cpp  trait.h
gurps_track/ui/: character_main_layout.h  character_skills_layout.cpp  character_skills_layout.h  skill_list_layout.h  ui_wrapper.h
gurps_track_old/: GURPS_skills_text  gurps_track.mk  gurps_track.sublime-project
gurps_track_old/data/: character.cpp  skills.h
gurps_track_old/main/: main.cpp
gurps_track_old/ui/: character_combat_layout.cpp  character_combat_layout.h  character_layout.cpp  character_layout.h  character_main_layout.cpp  character_main_layout.h  character_skills_layout.cpp  character_spells_layout.cpp  character_spells_layout.h  character_traits_layout.cpp  character_traits_layout.h  skill_list_layout.cpp  test_kiui_layout.cpp  test_kiui_layout.h  test_layout.cpp  test_layout.h  ui_wrapper.cpp  ui_wrapper.h
hexmap/: README.md  hexmap.mk  hexmap.sublime-project  hexmap_common.mk  libhexmap.mk
hexmap/assets/: License.txt
hexmap/data/: imported_textures.json  terrain_types.json
hexmap/win32/: hexmap.vcxproj  hexmap_sln.sln
hexmap_qt/: deployment.bat  prebuild.bat  prebuild.sh
hexmap_qt/build-hexmap_qt-Desktop_Qt_5_7_0_GCC_64bit-Debug/: .qmake.stash  Makefile  moc_hexmap_qt_item.cpp  moc_hexmap_qt_renderer.cpp  qrc_qml.cpp
hexmap_qt/hexmap_qt/: LayersPanel.qml  LayersPanelForm.ui.qml  MainMenuBar.qml  MainToolbar.qml  MapToolsBar.qml  asdf_qt_renderer.h  hexmap_framebuffer.cpp  hexmap_framebuffer.h  hexmap_qt.pro  hexmap_qt_renderer.cpp  hexmap_qt_renderer.h  qml.qrc  (+2 more)
lib/: Box2D.lib  SOIL.lib  freetype2410MT.lib  freetype2410MT_D.lib  ftgl_static_D.lib  libboost_filesystem-vc120-mt-1_55.lib  spine-c.lib
projector_fun/: gdb_debug.sh  projector_fun.mk  projector_fun.sublime-project  todo
(+172 files in other folders)
